--- a/free_code_camp/Portfolio/styles.css
+++ b/free_code_camp/Portfolio/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     width: 75%;
     margin: 0 auto;
@@ -63,11 +67,11 @@ a {
 a:hover {
     color: rgb(240, 230, 0);
     text-shadow: 0 0 15px rgba(240, 230, 0, 1), 0 0 30px rgba(240, 230, 0, 0.8);
-    transform: scale(1.15) rotate(5deg);
+    transform: scale(1.15);
 }
 
 .title-1 {
-    margin: 100px 0 0 0;
+    margin: 150px 0 0 0;
     font-size: 2em;
     color: rgb(255, 149, 0);
 }
@@ -171,7 +175,7 @@ footer {
     width: 100%;
     display: flex;
     justify-content: center;
-    text-align:center;
+    text-align: center;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -182,7 +186,7 @@ footer {
             #ff8e25 85%,
             #000000 100%);
     opacity: 0.9;
-    align-items:center;
+    align-items: center;
     font-weight: bolder;
     font-size: 1em;
     padding: 20px;
@@ -209,9 +213,11 @@ footer {
 .social-icon i {
     font-size: 2.5rem;
 }
-.place-bottom{
-    margin-bottom:125px
+
+.place-bottom {
+    margin-bottom: 125px
 }
+
 @media (max-width: 450px) {
     body {
         width: 90%;
@@ -250,5 +256,75 @@ footer {
     .list {
         flex-direction: column;
         width: 100%;
+    }
+}
+/*WORKS Page*/
+
+.works {
+    text-align: center;
+    margin-top: 100px;
+}
+
+.work-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-top: 50px;
+}
+
+.work-card {
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(255, 149, 0, 0.9));
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+    transition: transform 0.3s ease-in-out;
+    height:150px;
+    cursor: pointer;
+}
+
+.work-card h2 {
+    color: rgb(255, 149, 0);
+    margin-top: 10px;
+    text-align: center;
+}
+
+.work-card p {
+    display: flex;
+    color: rgb(255, 253, 223);
+    margin: 10px 0;
+    height:35px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.work-card:hover {
+    transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+    .work-gallery {
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 colonnes pour les écrans de taille moyenne */
+        gap: 20px;
+    }
+
+    .work-card {
+        height: 180px;
+        /* Ajuster la hauteur des cartes pour qu'elles tiennent mieux */
+    }
+}
+
+/* Pour les très petits écrans (max-width: 450px) */
+@media (max-width: 450px) {
+    .work-gallery {
+        grid-template-columns: 1fr;
+        /* Une seule colonne pour les petits écrans */
+        gap: 15px;
+    }
+
+    .work-card {
+        height: auto;
+        /* Ajuster la hauteur pour que le contenu s'adapte */
     }
 }
